// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Container renders successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;

exports[`components/Container renders successfully with its header 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "height": 50,
            },
            Object {
              "backgroundColor": "black",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "flex": 1,
              },
              Object {
                "minWidth": 150,
              },
            ]
          }
        >
          <Text
            bold={true}
            h6={true}
            style={
              Object {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
                "textTransform": "none",
              }
            }
            white={true}
          >
            App header
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;

exports[`components/Container renders successfully with its header and Back button 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "height": 50,
            },
            Object {
              "backgroundColor": "black",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 20,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "center",
                  "width": 50,
                }
              }
              transparent={true}
            >
              <Text
                allowFontScaling={false}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#fff",
                      "fontSize": 25,
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </TouchableOpacity>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "flex": 1,
              },
              Object {
                "minWidth": 150,
              },
            ]
          }
        >
          <Text
            bold={true}
            h6={true}
            style={
              Object {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
                "textTransform": "none",
              }
            }
            white={true}
          >
            App header
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;
